<resources>
    <string name="app_name">ProyectoFCT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--Login -->
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciarSesion">Entrar</string>
    <string name="registrar">Registrarte</string>
    <string name="olvidoDatos">He olvidado mis datos</string>
    <string name="recordarpass">Recordar contraseña</string>
    <string name="tambien_puedes">También puedes</string>
    <string name="crea_tu_cuenta">Crea tu cuenta:</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="recuperar_pass">Ingrese correo para recuperar contraseña:</string>
    <string name="email">Email</string>

    <!--Pantalla Principal -->
    <string name="titulo_pantallaPrincipal">Prácticas Android</string>
    <string name="practica_1">Práctica 1</string>
    <string name="practica_2">Práctica 2</string>
    <string name="navegacion">Navegación</string>
    <string name="funcion_no_disponible">Función no disponible</string>

    <!--Pantalla listado facturas -->
    <string name="consumo">Consumo</string>
    <string name="facturas">Facturas</string>

    <!--Pantalla filtrar facturas -->
    <string name="filtrar_facturas">Filtrar Facturas</string>
    <string name="fecha_emision">Con fecha de emisión</string>
    <string name="desde">Desde:</string>
    <string name="dia_mes">día/mes/año</string>
    <string name="hasta">Hasta:</string>
    <string name="por_un_importe">Por un importe</string>
    <string name="por_estado">Por estado</string>
    <string name="pagadas">Pagadas</string>
    <string name="anuladas">Anuladas</string>
    <string name="pendientes_de_pago">Pendientes de pago</string>
    <string name="plan_de_pago">Plan de pago</string>
    <string name="btn_aplicar">Aplicar</string>
    <string name="eliminar_filtros">Eliminar filtros</string>
    <string name="atras">Atrás</string>
    <string name="smart_solar">Smart Solar</string>
    <!-- Pantalla Smart Solar -->
    <string name="mi_instalacion">Mi instalación</string>
    <string name="energia">Energia</string>
    <string name="detalles">Detalles</string>
    <string name="texto_instalacion">Aquí tienes los datos de tu instalación fotovoltaica en tiempo real</string>
    <string name="texto_energia">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve podrás seguir viendo tu producción solar. Sentimos las molestias</string>
    <string name="cau">CAU(Código Autoconsumo)</string>
    <string name="estado_solicitud">Estado solicitud alta autoconsumidor</string>
    <string name="tipo_autoconsumo">Tipo autoconsumo</string>
    <string name="compensacion_excedentes">Compensación de excedentes</string>
    <string name="potencia_instalacion">Potencia de instalacion</string>
    <string name="preference_file_key">com.example.proyectofct.PREFERENCE_FILE_KEY</string>

    <!-- Pantalla Navegación -->
    <string name="titulo_navegacion">Desde una aplicación Android, se puede acceder a páginas webs, mediante el navegador externo o mediante Webviews.</string>
    <string name="abrir_navegador_externo">Abrir navegador externo</string>
    <string name="abrir_webview">Abrir Webview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activar_mock">Activar Mock</string>
    <string name="activar_ktor">Activar Ktor</string>

    <!-- Pop-up Detalles -->
    <string name="texto_popup">El tiempo estimado de activación de tu autoconsumo es de 1 a 2 meses, éste variará en función de tu comunidad autónoma y distribuidora</string>
    <string name="aceptar">Aceptar</string>
    <string name="titulo_popup">Estado solicitud autoconsumo</string>
    />

</resources>