<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical"
        tools:context=".ui.view.Activity.LoginActivity">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/ic_iberdrola" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/contrase_a"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/ic_ojoPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/opacity"
                android:src="@drawable/ic_ojo" />
        </FrameLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/rememberPass"
            style="style/GreenCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recordarpass"
            android:textStyle="bold"
            android:checked="false"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidoDatos"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnInicioSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/iniciarSesion" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:gravity="center_horizontal"
                android:text="@string/tambien_puedes" />


            <Button
                android:id="@+id/btnRegistrar"
                style="@style/CustomOutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>