<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="40dp"
    android:orientation="vertical"
    tools:context=".ui.view.Activity.SignupActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ic_iberdrola" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Crea tu cuenta"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/etEmailNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPasswordNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_ojo"
        android:hint="@string/contrase_a"
        android:inputType="textPassword" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnInicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/iniciarSesion" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center_horizontal"
            android:text="@string/tambien_puedes" />


        <Button
            android:id="@+id/btnRegistrar"
            style="@style/CustomOutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar" />

    </LinearLayout>


</LinearLayout>