<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="250dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="17dp"
        android:text="@string/titulo_popup"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvContenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/texto_popup" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:text="@string/aceptar" />
</LinearLayout>