<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.Activity.SmartSolarActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
       >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/ic_nav_before" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atras"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_solar"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="47dp"
        android:background="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabInstalacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_instalacion" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabEnergia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energia" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabDetalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalles" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>